# ros2-web-demo

./: .gitignore  README.md
.devcontainer/: devcontainer.json
src/assembly_pipeline/: package.xml  setup.cfg  setup.py
src/assembly_pipeline/assembly_pipeline/: action_client.py  action_server.py  cad_loader.py  feature_analyser.py  instruction_generator.py  operation_reasoner.py  pipeline_status_client.py  pipeline_status_server.py
src/assembly_pipeline/launch/: pipeline.launch.py
src/assembly_pipeline_interfaces/: CMakeLists.txt  package.xml
src/assembly_pipeline_interfaces/action/: GenerateAssemblyPlan.action
src/assembly_pipeline_interfaces/msg/: AssemblyInstructions.msg  AssemblyOperations.msg  GeometryFeatures.msg  InputModel.msg
src/my_robot/: package.xml  setup.py
src/my_robot/my_robot/: velocity_publisher.py  velocity_subscriber.py
